gitops/overlays/staging/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdb-estimator-frontend-public
  labels:
    app.kubernetes.io/name: cdb-estimator-frontend-public
spec:
  ingressClassName: nginx
  rules:
    - host: cdb-estimator-staging.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdb-estimator-frontend
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdb-estimator-frontend-internal
  labels:
    app.kubernetes.io/name: cdb-estimator-frontend-internal
spec:
  ingressClassName: nginx
  rules:
    - host: cdb-estimator-staging.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdb-estimator-frontend
                port:
                  name: http
